--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,15 +1,21 @@
 header {
   position: fixed;
+  top: 0;
   height: 3rem;
   width: 100%;
   min-width: min-content;
   display: flex;
   align-items: center;
-  box-shadow: 1px 1px 3px;
+  /* box-shadow: 1px 1px 3px; */
+  z-index: 1;
+  color: antiquewhite;
+  background: rgb(13, 32, 75);
 }
 
 .title {
   margin-left: 1em;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-style: italic;
+  text-decoration: line-through;
 }
+
