--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -71,7 +71,7 @@
 } 
 
 .name-title {
- font-family: Georgia, 'Times New Roman', Times, serif;
+ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  margin-bottom: 2em;
  font-size: 1.4em;
 }
@@ -85,8 +85,9 @@
 
 .para-about {
   margin: 1em 0;
-  word-spacing: 1.5px;
-  font-family: 'Courier New', Courier, monospace;
+  word-spacing: 5px;
+  line-height: 1.5em;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 510;
   color: rgba(127, 255, 212, 0.86);
 }
