--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -9,6 +9,7 @@
 .skills-title {
   justify-self: center;
   margin-bottom: 1.2em;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .skills-cont {
@@ -16,7 +17,11 @@
   display: flex;
   justify-content: center;
   border-radius: .5em;
-  box-shadow: -2px -2px 4px;
+  box-shadow: -2px -2px 3px;
+}
+
+.skills-cont:hover {
+  box-shadow: -3px -3px 4px;
 }
 
 img {
@@ -57,6 +62,23 @@ img {
   img {
     height: 4em;
     margin: 1em;
+  }
+}
+
+@media screen and (max-width:390px) {
+  .skills-cont {
+    display: grid;
+    grid-template-columns: 3fr 3fr 3fr;
+    place-items: center;
+  }
+
+  img {
+    height: 3em;
+    margin: .5em;
+  }
+
+  .js {
+    margin-right: .5em;
   }
 }
 
