Updayed the navbar
Changed the UI of the navbar tosuit different screen sizes

--- a/src/components/work/Work.css
+++ b/src/components/work/Work.css
@@ -60,16 +60,16 @@
   line-height: 1.5em;
 }
 
-a {
+.weather {
   color: rgb(130, 130, 221);
   text-decoration: none;
 }
 
-a:active {
+.weather:active {
   color: green;
 }
 
-a:visited {
+.weather:visited {
   color: brown;
 }
 
