--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,12 +1,12 @@
 header {
   position: fixed;
   top: 0;
-  height: 3rem;
+  height: 4rem;
   width: 100%;
   min-width: min-content;
-  display: flex;
-  align-items: center;
-  /* box-shadow: 1px 1px 3px; */
+  display: grid;
+  grid-template-columns: 2.5fr 4fr;
+  align-items:center ;
   z-index: 1;
   color: antiquewhite;
   background: rgb(13, 32, 75);
@@ -17,5 +17,96 @@ header {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-style: italic;
   text-decoration: line-through;
+}
+
+.nav {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+}
+
+.navbar{
+  display: flex;
+  align-content: center;
+  justify-content: end;
+}
+
+.navbar > li {
+  list-style-type: none;
+}
+
+.navlink {
+  margin: 1em;
+  font-size: 1.25em;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: antiquewhite;
+  text-decoration: none;
+}
+
+.fa-bars, .fa-xmark {
+  align-self: center;
+  display: none;
+  background:rgb(13, 32, 75);
+  margin-left: -2em;
+  border: none;
+  outline: none;
+}
+
+/* Pads */
+@media screen and (max-width:987px) {
+  .navlink {
+    margin: .7em;
+    font-size: 1.2em;
+  }
+}
+
+/* Small Screens */
+@media screen and (max-width:787px) {
+  .navlink {
+    font-size: .8em;
+  }
+}
+
+@media screen and (max-width:600px) {
+  .navbar {
+      display: none; 
+      animation: navig 1.5s ease-out 0s 1;
+  }
+
+  @keyframes navig {
+    0% {
+      height: 0;
+    }
+    100% {
+      height: 22em;
+    }
+  }
+
+  .navbar {
+    padding: 2em;
+    position: fixed;
+    left: 0;
+    top: 4em;
+    height: 22em;
+    width: 100%;
+    background-color: rgba(29, 216, 200, 0.89);
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+  }
+
+  .navbar > li {
+    margin: .7em;
+    font-size: 1.35em;
+  }
+  
+  .navlink {
+    color: rgb(13, 32, 75);
+    border-bottom: 1px double;
+  }
+
+  .fa-bars, .fa-xmark {
+    display: block;
+    grid-column: 2;
+  }
 }
 
