Added state to App.js
Added state to take care of the display of the navbar

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -105,8 +105,10 @@ header {
   }
 
   .fa-bars, .fa-xmark {
-    display: block;
+    display: grid;
     grid-column: 2;
+    justify-self: end;
+    margin-right: .7em;
   }
 }
 
