--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -20,13 +20,14 @@
   margin: 1em;
   border-radius: 5px;
   box-shadow: -1px -1px 2px;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows:4fr 1fr 2,5fr 1fr;
   color: antiquewhite;
 }
 
 .projo:hover {
-  box-shadow: -3px -3px 4px rgb(122, 216, 110);
+  box-shadow: -2px -2px 3px rgb(122, 216, 110);
+  border: 1px solid rgb(122, 216, 110);
 }
 
 .projo-photo {
@@ -64,7 +65,6 @@
 
 .projo-des {
   margin: .5em;
-  min-height: 130px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 14.5px;
   word-spacing: 3px;
@@ -74,7 +74,7 @@
 }
 
 .linking {
-  align-self: flex-end;
+  justify-self: end;
   margin: 1em 1em 0;
 }
 
