Updated Intro folder
Added an emoji to the site, a greetings emoji

--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -78,6 +78,11 @@
   font-size: 2em;
 } 
 
+.emoji {
+  margin-left: .1em;
+  font-size: .9em;
+}
+
 .name-title {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  margin-bottom: 2em;
