--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -8,6 +8,7 @@
 .projects-title {
   align-self: center;
   margin-bottom: .5em;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .projects-container {
