Updated Intro folder and footer
Changed the font size of the about paragraph and added a credit to the businessman icon in the head

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -189,6 +189,11 @@ body {
   margin-left: .3em;
 }
 
+.end > a {
+  color: antiquewhite;
+  margin-top: .7em;
+}
+
 @keyframes eli {
   25% {
     color: rgb(184, 245, 18);
