Updated Header.css and Intro.css
Changed the font size of the bras and xmark on navbar

--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -48,13 +48,13 @@
   height: 50px;
 }
 
-.fa-brands, .fa-solid {
+.fa-brands, .fa-envelope {
   font-size: 30px;
   color: rgb(234, 234, 238);
   margin: 0 .4em;
 }
 
-.fa-brands:hover, .fa-solid:hover {
+.fa-brands:hover, .fa-envelope:hover {
   color: aqua;
 }
 
