--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -9,7 +9,7 @@ header {
   align-items:center ;
   z-index: 1;
   color: antiquewhite;
-  background: rgb(13, 32, 75);
+  background: linear-gradient(to left, rgb(16, 9, 56), rgb(22, 67, 126), rgb(16, 9, 56));
 } 
 
 .title {
