--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,99 +1,98 @@
 .projects {
-  color: antiquewhite;
-  margin: 1em;
-  display: flex;
-  flex-direction: column;
+	color: var(--antiquewhite);
+	margin: 1em;
+	display: flex;
+	flex-direction: column;
 }
 
 .projects-title {
-  align-self: center;
-  margin-bottom: .5em;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	align-self: center;
+	margin-bottom: 0.5em;
+	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+		"Lucida Sans", Arial, sans-serif;
 }
 
 .projects-container {
-  display: grid;
-  grid-template-columns: 3fr 3fr;
+	display: grid;
+	grid-template-columns: 3fr 3fr;
 }
 
 .projo {
-  padding: 1em;
-  margin: 1em;
-  border-radius: 5px;
-  box-shadow: -1px -1px 2px;
-  display: grid;
-  grid-template-rows:4fr 1fr 2,5fr 1fr;
-  color: antiquewhite;
+	padding: 1em;
+	margin: 1em;
+	border-radius: 5px;
+	box-shadow: -1px -1px 2px;
+	display: grid;
+	grid-template-rows: 4fr 1fr 2, 5fr 1fr;
+	color: var(--antiquewhite);
 }
 
 .projo:hover {
-  box-shadow: -2px -2px 3px rgb(122, 216, 110);
-  border: 1px solid rgb(122, 216, 110);
+	box-shadow: -2px -2px 3px rgb(122, 216, 110);
+	border: 1px solid rgb(122, 216, 110);
 }
 
 .projo-photo {
-  margin: .5em 0;
+	margin: 0.5em 0;
 }
 
 .projo-photo > img {
-  height: 90%;
-  width: 90%;
-  margin: .5em;
-  object-fit: cover;
+	height: 90%;
+	width: 90%;
+	margin: 0.5em;
+	object-fit: cover;
 }
 
 .weather > img {
-  box-shadow: 1.5px 1.5px 3px rgb(115, 126, 161);
+	box-shadow: 1.5px 1.5px 3px rgb(115, 126, 161);
 }
 
 .budget > img {
-  box-shadow: 1.5px 1.5px 3px;
+	box-shadow: 1.5px 1.5px 3px;
 }
 
 .to-do > img {
-  box-shadow: 1.5px 1.5px 3px rgb(155, 106, 175);
+	box-shadow: 1.5px 1.5px 3px rgb(155, 106, 175);
 }
 
 .portfolio-site > img {
-  box-shadow: 1px 1px 3px aquamarine;
+	box-shadow: 1px 1px 3px aquamarine;
 }
 
 .projo-name {
-  margin: .5em .5em .5em 2em;
-  text-transform: uppercase;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	margin: 0.5em 0.5em 0.5em 2em;
+	text-transform: uppercase;
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .projo-des {
-  margin: .5em;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 14.5px;
-  word-spacing: 3px;
-  line-height: 1.5em;
-  text-indent: 7px;
-  color: rgba(250, 235, 215, 0.726);
+	margin: 0.5em;
+	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+	font-size: 14.5px;
+	word-spacing: 3px;
+	line-height: 1.5em;
+	text-indent: 7px;
+	color: var(--antiquewhite);
 }
 
 .linking {
-  justify-self: end;
-  margin: 1em 1em 0;
+	justify-self: end;
+	margin: 1em 1em 0;
 }
 
 .btn-check {
-  cursor: pointer;
-  height: 2em;
-  width: 5em;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: rgb(61, 9, 9);
-  border: none;
-  border-radius: 4px;
-  color: rgba(250, 235, 215, 0.877);
+	cursor: pointer;
+	height: 2em;
+	width: 5em;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	background-color: rgb(61, 9, 9);
+	border: none;
+	border-radius: 4px;
+	color: rgba(250, 235, 215, 0.877);
 }
 
-
-@media screen and (max-width:775px) {
-  .projects-container {
-    grid-template-columns: 3fr;
-  }
+@media screen and (max-width: 775px) {
+	.projects-container {
+		grid-template-columns: 3fr;
+	}
 }
-
